# CodeNest

./: .gitignore  .npmrc  .release-it.json  CLAUDE.md  LICENSE.txt  README.md  README_CN.md  README_EN.md  README_TW.md  eslint.config.mjs  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  unocss.config.ts  vite.config.ts  vitest.config.ts
data/: languages.yml
docs/: CONTRIBUTING_CN.md  CONTRIBUTING_EN.md  Unocss order.md  commit.md  refactor-homeview-composables.md
electron/: ipc.js  ipc.ts  ipcHandler.ts  main.js  main.ts  preload.js  preload.ts
jet-icons/: README.md  build-icons.js  jet-icons.json
jetv-ui/: .gitignore  README.md  eslint.config.mjs  index.ts  package.json  pnpm-lock.yaml  tsconfig.json  unocss.config.ts  vite.config.base.ts  vite.config.dev.ts  vite.config.prod.ts  vite.config.ts
scripts/: add-suffix-js.js  build-icons.js  build-ui.sh  sync-version.js
src/: App.vue  global.d.ts  index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: analyzer.rs  command_line.rs  data.rs  dialog.rs  lib.rs  main.rs  project.rs  recent.rs  scanner.rs  secret.rs  system.rs  updater.rs  webdav.rs
src-tauri/src/analyzer/: language.rs  models.rs  overrides.rs  paths.rs  scan.rs
src-tauri/src/project/: commands.rs  editor.rs  license.rs  path_safety.rs
src-tauri/src/project/editor/: detect.rs  launch.rs
src-tauri/src/recent/: cli.rs  common.rs  jetbrains.rs  models.rs  vscode.rs
src-tauri/src/scanner/: detect.rs  git.rs  models.rs  scan.rs
src-tauri/src/system/: accent.rs  external.rs  path.rs  terminal.rs  window.rs
src-tauri/src/webdav/: error.rs  files.rs  models.rs  remote.rs  sync.rs
tests/: licenseDetector.test.ts  localeKeys.test.ts  persistence.test.ts  projectScannerService.test.ts  projectsStore.test.ts  settingsStore.test.ts
tsconfig/: tsconfig.base.json  tsconfig.electron.json  tsconfig.electron.preload.json  (+1 more)
(+494 files in other folders)
